package org.example.domain;

import lombok.Value;

import java.time.LocalDateTime;

@Value
public class TimestampOfTheRegistration {
    LocalDateTime value;
}
