package org.example.domain;

import lombok.Value;

@Value
public class TotalOverTimeHours {
    int value;
}
