package org.example.domain;
import lombok.Value;

@Value
public class TotalWorkingHours {
    int value;
}
